start to rev Heb I

--- a/HB/HB2201-Driver2024.tex
+++ b/HB/HB2201-Driver2024.tex
@@ -1,4 +1,4 @@
-% Copyright (c) 2020 by Daniel R. Driver.
+% Copyright (c) 2024 by Daniel R. Driver.
 % !TEX encoding = UTF-8 Unicode
 % !TEX TS-program = XeLaTeX
 
@@ -12,7 +12,7 @@
 \input{\incl/variables}
 
 %\onlinetrue % \Int{true}{false}
-\coursecode[3.6.0]{HB 2201}
+\coursecode[3.7]{HB 2201}
 \coursetitle[Hebrew Bible]{Beginning Biblical Hebrew I}
 
 % Taught as HEBR 2013 in:
@@ -24,27 +24,28 @@
 %   - Fall 2018
 %   - Summer 2020 (on Teams)
 %   - Summer 2022 (on campus)
+%   - Fall 2024 (hybrid)
 
 \professor{Daniel R. Driver}
 \phone{902-425-7051}
-\email{ddriver@astheology.ns.ca}
-\officehours{Daily, 1:00--2:00 \PM}
+\email{daniel.driver@astheology.ns.ca}
+\officehours{Mondays, 1:00--3:00 \PM}
 
-\semester{Summer Term 2022}
-\meets{Daily (Mon–Fri)}% \meets{on}{at}{in}
-      {9:00 \AM--12:00 \PM}
-      {Classroom 3}
+\semester{Fall 2024}
+\meets{Thursdays}% \meets{on}{at}{in}
+      {2:00--4:30 \PM}% if online, it prints "From 9:00 AM"
+      {Classroom 3}% if online, it prints "Brightspace" with link
 \website{danieldriver.com}
 \cdescription[none. The course is required for HB 2202 and advanced biblical Hebrew]{% copy from the current Academic Calendar; [] for prereqs
 
 	For students who wish to read, hear, and even (to an extent) produce
 	Hebrew, this course offers a textually immersive introduction to
-	classical Hebrew. Grammatical features like morphology, phonology, and
-	syntax are learned inductively, through a cycle of illustrated readings
-	drawn from Genesis. Techniques of second-language acquisition are also
-	used to help develop language competency. Continuation in HB 2202 is
-	strongly recommended. This course is open to for-credit students and to
-	Continuing Education participants.
+	classical Hebrew. Grammatical features like morphology, phonology,
+	and syntax are learned inductively, through a progression of
+	readings drawn from Genesis. Techniques of second-language
+	acquisition are also used to help develop language competency.
+	Continuation in HB 2202 is strongly recommended. This course is open
+	to for-credit students and to Continuing Education participants.
 
 }% end of course description
 \objectives{% recall Bloom's taxonomy: http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
