F24 syllabus for HB 2201

--- a/HB/HB2201-Driver2024.tex
+++ b/HB/HB2201-Driver2024.tex
@@ -34,7 +34,7 @@
 \semester{Fall 2024}
 \meets{Thursdays}% \meets{on}{at}{in}
       {2:00--4:30 \PM}% if online, it prints "From 9:00 AM"
-      {Classroom 3}% if online, it prints "Brightspace" with link
+      {Classroom 3/Teams}% if online, it prints "Brightspace" with link
 \website{danieldriver.com}
 \cdescription[none. The course is required for HB 2202 and advanced biblical Hebrew]{% copy from the current Academic Calendar; [] for prereqs
 
@@ -51,40 +51,25 @@
 \objectives{% recall Bloom's taxonomy: http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
 	The basic goal of this course is to begin to learn the rudiments of
 	biblical Hebrew. The course is designed as the first part of a
-	two-semester series. Since some may not continue in the Fall,
-	however, \ccode is being offered with two different options for
-	outcomes.
-
-	Option 1: Learn the alphabet, vowels, and syllables with the aim of
-	continuing to learn Hebrew in HB 2202. Students will become
-	familiar with the components that can be added to the front and back
-	of Hebrew nouns and adjectives so that they can gain a basic
-	understanding of the relationship between parsings in electronic
-	sources (Accordance, Logos) and parallel translations. The verb
-	system will be introduced briefly with the same purpose. On this
-	path, students will read and translate a few passages from Genesis
-	so that they can begin to read the Hebrew Bible with understanding.
-	Students will learn about the limits of what they know so that they
-	are less likely to misapply what they learn in church contexts. This
-	option should be the default for students taking the course for
-	credit.
-
-	Option 2: Learn the alphabet, vowels, and syllables with the aim of
-	continuing to learn Hebrew on your own. Students will hear and read
-	the same overviews as in Option 1, but may choose to work through
-	the assigned exercises at a slower pace. The goal is to gain enough
-	experience to become self-learners who can complete assigned
-	readings and translations as they are able. Students will build
-	enough confidence and momentum to progress through the grammar and
-	workbook on their own schedule. This option caters to the objectives
-	of some continuing education students, for example, but without
-	imposing limits. Note that, in a past iteration of the course, the
-	highest achiever overall was an auditor.
-
-	A goal in every case is to whet the appetite for learning Biblical
-	Hebrew for long-term study and use. Language is communal. In the
-	near term, therefore, every student will also have the opportunity
-	to become part of a community of language learners.
+	two-semester series. Students will learn the alphabet, vowels, and
+	syllables. They will become familiar with the components that can be
+	added to the front and back of Hebrew nouns and adjectives so that
+	they can gain a basic understanding of the relationship between
+	parsings in electronic sources (Accordance, Logos) and parallel
+	translations. The verb system will be introduced briefly with the
+	same purpose. Students will read and translate a few passages from
+	Genesis so that they can begin to read the Hebrew Bible with
+	understanding. They will learn about the limits of what they know,
+	too.
+	
+	Students who wish to continue formal study of Hebrew in HB 2202 will
+	be prepared to do so. Others who do not continue in the course
+	series will gain skill, confidence, and momentum to progress further
+	in the grammar and workbook on their own schedule. A goal in every
+	case is to whet the appetite for learning Biblical Hebrew for
+	long-term study and use. Language is communal. In the near term,
+	therefore, every student will also have the opportunity to become
+	part of a community of language learners.
 }% end of learning objectives
 
 \input{\incl/preamble}
@@ -139,15 +124,21 @@ making oral presentations, and learning languages.
     \bibitem[BHS]{bhs}
     \emph{Biblia Hebraica Stuttgartensia}.
     Stuttgart: Deutsche Bibel\-ge\-sell\-schaft, 1997. ISBN 978-1598561630.
-    This remains the standard critical edition, though it is gradually
-    being replaced by the BHQ. A paperback edition, marketed to
-    students, is also available; the hardback is much more durable.
+    Optional for HB 2201, required for HB 2202. The paperback student
+    edition is more affordable, but the hardcover is significantly more
+    durable.
+    
+    \bibitem[BDB]{bdb}
+    Francis Brown, S.\,R. Driver and C.\,A. Briggs. \emph{The
+    Brown-Driver-Briggs Hebrew and English Lexicon}. Peabody, Mass:
+    Hendrickson, 2004 (orig. ed. 1906).
+    Optional for HB 2201, required for HB 2202.
 
 	\bibitem[Making Sense]{rlgs} Northey, Margot, Bradford A. Anderson, and Joel N. Lohr.
 	\emph{Making Sense in Religious Studies: A Student's Guide to Research and Writing}.
 	3rd ed. Toronto: Oxford University Press, 2019. ISBN 978-0199026838.
 
-	\bibitem[SBL2]{sbl2} Collins, Billie Jean, et al.
+	\bibitem[SBLHS2]{sbl2} Collins, Billie Jean, et al.
 	\emph{The SBL Handbook of Style}.
 	2nd ed. Atlanta: SBL Press, 2014. ISBN 978-1589839649. See the free
 	\href{https://www.sbl-site.org/assets/pdfs/pubs/SBLHSsupp2015-02.pdf}{Student Supplement}.
@@ -169,16 +160,20 @@ the needs of the class.
     \toprule
     \bfseries Ch & \textbf{Learning Biblical Hebrew: Grammar} & \textbf{Workbook} & \textbf{Date} \\
     \midrule
-    1  & The Hebrew Alphabet                                          & E1 (a–b) & 13 June \\
-    2  & Hebrew Vowels                                                & E2       & 14 June \\
-    3  & Syllables and Reading Hebrew                                 & E3       & 15 June \\
-    4  & Gender and Number, Definite Article, Conjunction             & E4, R4   & 16 June \\
-    5  & Vowel Changes in Hebrew Nouns                                & E5, R4   & 17 June \\
-    6  & Noun and Adjective Function                                  & R6       & 20 June \\
-    7  & Constructs, Directional Ending, Prepositions, Interrogatives & E7, R7   & 21 June \\
-    8  & Pronominal Suffixes and Review of Definiteness               & E8, R8   & 22 June \\
-    9  & Learning to Read Intuitively: Common Patterns in Nouns       & R9–10    & 23 June \\
-    10 & Numbers                                                      & R9–10    & 24 June \\
+    1  & The Hebrew Alphabet                                          & E1 (a–b) &  5 Sep \\
+    2  & Hebrew Vowels                                                & E2       & 12 Sep \\
+    3  & Syllables and Reading Hebrew                                 & E3       & 19 Sep \\
+	\noclass{Study, Consolidate, Work Ahead}                                     & 26 Sep \\
+    4  & Gender and Number, Definite Article, Conjunction             & E4, R4   &  3 Oct \\
+    5  & Vowel Changes in Hebrew Nouns                                & E5, R4   & 10 Oct \\
+    6  & Noun and Adjective Function                                  & R6       & 17 Oct \\
+	\noclass{Reading Week from Tuesday to Friday}                                & 24 Oct \\
+    7  & Constructs, Directional Ending, Prepositions, Interrogatives & E7, R7   & 31 Oct \\
+    8  & Pronominal Suffixes and Review of Definiteness               & E8, R8   &  7 Nov \\
+    9  & Learning to Read Intuitively: Common Patterns in Nouns       & R9–10    & 14 Nov \\
+    10 & Numbers                                                      & R9–10    & 21 Nov \\
+    11 & Introduction to Hebrew Verbs                                 & R11–12   & 28 Nov \\
+    12 & Vowel Changes in Verbs                                       & R11–12   &  5 Dec \\
     \bottomrule
   \end{tabular}
   \caption{Schedule of Lessons by Chapter, Exercise (E) \& Reading (R)}
@@ -195,18 +190,18 @@ The grade structure for \ccode has the following elements.
 \begin{enumerate}
  \item
     Students are expected to read and study all \textbf{lessons} in
-    Chapters 1–10 of the \cite{lbh}, and to complete the accompanying
+    Chapters 1–12 of the \cite{lbh}, and to complete the accompanying
     \textbf{exercises} and Hebrew \textbf{readings} in the \cite{work}.
     Students should use the answer key to correct and evaluate their own
-    work. Assignments will be assessed at the end of each week for
-    completeness only. Students who are taking the course for credit
-    should be prepared to show evidence of their efforts during office
-    hours on Fridays, and, if requested, to upload scans (PDFs) or
-    photos of any relevant pages \cite[3–34, 79–101]{work}.
+    work. Assignments will be assessed periodically for completeness
+    only. Students who are taking the course for credit should be
+    prepared to show evidence of their efforts in class or during
+    office, or, if requested, to upload scans (PDFs) or photos of any
+    relevant pages \cite[3–34, 79–115]{work}.
  \item
     \textbf{Quizzes} are based on the \cite{lbh} and \cite{work}
     assignments. Between four and six quizzes will be set throughout the
-    two-week course. All quizzes are closed book. Students must take
+    course. All quizzes are closed book. Students must take
     opportunities accurately to assess what they have learned and
     retained. Continuing education students and auditors are encouraged
     to participate in these exercises fully by scoring and correcting
