rephrase for clarity

--- a/BF/BF1001-Driver2024.tex
+++ b/BF/BF1001-Driver2024.tex
@@ -13,7 +13,7 @@
 
 %\onlinetrue % \Int{true}{false}
 %\UGtrue % \UG{true}{false} terms for undergraduate students
-\coursecode[4.1\UG{-UG}{}]{BF 1001\UG{-UG}{}}
+\coursecode[4.1.1\UG{-UG}{}]{BF 1001\UG{-UG}{}}
 \coursetitle[Biblical Foundations]{Hebrew Bible/Old Testament}
 
 % Taught as RLGS 1013 in:
@@ -231,7 +231,7 @@ the needs of the class.
   \centering
   \begin{tabular}{>{\sessioncount.}r@{ }lllr}% make sure the column config agrees with \setcolumncount
 	\toprule
-	\sessionskip{\textbf{\S}.}&\textbf{Primary reading}&\textbf{Focal texts}&\textbf{Secondary}&\textbf{Due}\\
+	\sessionskip{\textbf{\S}.}&\textbf{Primary reading}&\textbf{Focal chs.}&\textbf{Secondary}&\textbf{Due}\\
 	\midrule
 
 	\unit{Law / Torah / Pentateuch} \\
@@ -281,7 +281,7 @@ The grade structure for \ccode has the following elements.
 	\item \textbf{Notes and quotes} will be solicited from students at
 	the start of each class. These are to be drawn from the primary
 	reading \cite{njps}. What do you note about the material on this
-	occasion? What words, phrases, or verses stand out to you? Pay
+	occasion? What words, phrases, or ideas stand out to you? Pay
 	attention to things you notice from a survey of large sections of
 	the Bible. Stay alert, too, to details that strike you from this
 	translation. Mark up your Bible. Make notes as you read. Come
