--- a/BF/DTS2000-Driver2024.tex
+++ b/BF/DTS2000-Driver2024.tex
@@ -13,7 +13,7 @@
 
 \onlinetrue % \Int{true}{false}
 %\UGtrue % \UG{true}{false} terms for undergraduate students
-\coursecode[2.0]{DTS 2000}
+\coursecode[2.0.1]{DTS 2000}
 \coursetitle[Diploma in Theological Studies]{Introduction to the Old Testament}
 
 % Taught in parallel with BF 1001 in:
@@ -161,7 +161,7 @@ the needs of the class.
   \centering
   \begin{tabular}{>{\sessioncount.}r@{ }lllr}% make sure the column config agrees with \setcolumncount
 	\toprule
-	\sessionskip{\textbf{\S}.}&\textbf{Primary reading}&\textbf{Focal texts}&\textbf{Secondary}&\textbf{From}\\
+	\sessionskip{\textbf{\S}.}&\textbf{Primary reading}&\textbf{Focal chs.}&\textbf{Secondary}&\textbf{From}\\
 	\midrule
 
 	\unit{Law / Torah / Pentateuch} \\
@@ -210,7 +210,7 @@ The grade structure for \ccode has the following elements.
 	\item \textbf{Notes and quotes} will be solicited from students in
 	each week of class. These are to be drawn from the primary reading
 	\cite{njps}. What do you note about the material on this occasion?
-	What words, phrases, or verses stand out to you? Pay attention to
+	What words, phrases, or ideas stand out to you? Pay attention to
 	things you notice from a survey of large sections of the Bible. Stay
 	alert, too, to details that strike you from this translation. Mark
 	up your Bible. Make notes as you read.
