--- a/BF/BF1001-Driver2024.tex
+++ b/BF/BF1001-Driver2024.tex
@@ -323,7 +323,7 @@ The grade structure for \ccode has the following elements.
 		the Tanakh/OT/HB to others today who are shaped by your
 		tradition? If desired, you may craft this paper as an open
 		letter to a peer (someone like you before this course) or an
-		authority (an offical leader or public figure). In your
+		authority (an official leader or public figure). In your
 		discussion, incorporate at least two good examples from the
 		Bible. Whether you make points broad or narrow, be sure to cite
 		chapter and verse.
@@ -371,7 +371,7 @@ The grade structure for \ccode has the following elements.
 		single sentence in an obvious location. Each paper should
 		interact with at least \UG{four (4)}{six (6)} sources or
 		commentators, not counting lectures (which need not be cited).
-		
+
 		\item See my \href{https://danieldriver.com/assets/pdf/handouts/Guidelines_for_Papers.pdf}{“Guidelines for Papers and Other Written Assignments” (PDF)}.
 		See also \cite[chs. 3, 5, 8, 11]{rlgs} and \cite{sbl2}.
 
