rev schedule, bump v3.7.1

--- a/HB/HB2202-Driver2025.tex
+++ b/HB/HB2202-Driver2025.tex
@@ -12,7 +12,7 @@
 \input{\incl/variables}
 
 %\onlinetrue % \Int{true}{false}
-\coursecode[3.7]{HB 2202}
+\coursecode[3.7.1]{HB 2202}
 \coursetitle[Hebrew Bible]{Beginning Biblical Hebrew II}
 
 % Taught as HEBR 2023 in:
@@ -29,7 +29,7 @@
 \professor{Daniel R. Driver}
 \phone{902-425-7051}
 \email{daniel.driver@astheology.ns.ca}
-\officehours{Thursdays, 10:00--11:30 \AM}
+\officehours{Thursdays, 10:30--11:30 \AM}
 
 \semester{Winter 2025}
 \meets{Thursdays}% \meets{on}{at}{in}
@@ -148,14 +148,16 @@ the needs of the class.
     13     & Qal Perfects                             & E13, R13     & 23 Jan \\
     14     & Qal Imperfects                           & E14, R14     & 30 Jan \\
     15     & Qal Volitionals                          & E15, R15     &  6 Feb \\
-    16     & Qal Participles and Infinitives          & E16, R16     & 13 Feb \\
+    15     & Qal Volitionals cont’d                   & E15, R15     & 13 Feb \\
 	\noclass{Reading Week (AST Open)}                                & 20 Feb \\
-    17     & Qal Waw Consecutives                     & R17          & 27 Feb \\
-    18     & Niphal                                   & E18, R18     &  6 Mar \\
-    19     & Piel, Pual, and Hithpael                 & E19, R19     & 13 Mar \\
-    20--21 & Hiphil and Hophal; Rare Verb Stems       & E20, R20     & 20 Mar \\
-    22     & Verbs with Object Suffixes               & R22--        & 27 Mar \\
-    23     & Irregular Features with Object Suffixes  & E23, R22--23 &  3 Apr \\
+    16     & Qal Participles and Infinitives          & E16, R16     & 27 Feb \\
+    16     & Self-Directed Study, Review              & E16, R16     &  6 Mar \\
+    17     & Qal Waw Consecutives                     & R17          & 13 Mar \\
+    18     & Niphal                                   & E18, R18     & 20 Mar \\
+    19     & Piel, Pual, and Hithpael                 & E19, R19     & 27 Mar \\
+    20--21 & Hiphil and Hophal; Rare Verb Stems       & E20, R20     &  3 Apr \\
+%   22     & Verbs with Object Suffixes               & R22--        & 27 Mar \\
+%   23     & Irregular Features with Object Suffixes  & E23, R22--23 &  3 Apr \\
 	\reminder{End of Term: Final marks are due for all courses}{14 Apr} \\
     \bottomrule
   \end{tabular}
@@ -183,7 +185,7 @@ The grade structure for \ccode has the following elements.
     \cite{work} to the course website.
  \item
     \textbf{Quizzes} are based on the \cite{lbh} and \cite{work}
-    assignments. Between six and ten quizzes will be set throughout the
+    assignments. Between four and six quizzes will be set throughout the
     course. All quizzes are closed book. Students must take
     opportunities accurately to assess what they have learned and
     retained. Continuing education students and auditors are encouraged
