update syllabus for S25

--- a/HB/HB 3117-Creation.tex
+++ b/HB/HB 3117-Creation.tex
@@ -12,36 +12,38 @@
 \input{\incl/variables}
 
 %\onlinetrue % \Int{true}{false}
-\coursecode[1.0]{HB 3117(Hyb)}
+\coursecode[2.0]{HB 3117}
 \coursetitle[Hebrew Bible]{Creation and Canon}
 
 % Taught as HB 3117 in:
 %   - Fall 2021 (Hyb)
+%   - Summer 2025
 
 \professor{Daniel R. Driver}
 \phone{902-425-7051}
-\email{ddriver@astheology.ns.ca}
-\officehours[Microsoft Teams]{Tuesdays, 1:00--3:00 \PM}
+\email{daniel.driver@astheology.ns.ca}
+\officehours{Mon--Thur, 1:00--2:00 \PM}
 
-\semester{Fall Term 2021}
-\meets{Mondays}% \meets{on}{at}{in}
-      {4:00--6:30 \PM}% if online, it prints "From 9:00 AM"
-      {Classroom 3/Teams}% if online, it prints "Brightspace" with link
+\semester{Summer Term 2025}
+\meets{Daily, Mon--Fri}% \meets{on}{at}{in}
+      {9:15 \AM--12:15 \PM}% if online, it prints "From 9:00 AM"
+      {King's Room}% if online, it prints "Brightspace" with link
 \website{danieldriver.com}
 \cdescription[RM 1000 or GTRS 6000; BF 1001]{% copy from the current Academic Calendar; [] for prereqs
 	A study of creation across the Christian Bible, with particular
 	focus on the HB/OT, this course will explore why the topic of
 	creation has been sidelined in biblical studies and biblical
 	theology, and how, thanks in part to the ecological crisis, it is
-	getting new attention. Major headings in the course are creation,
-	counter-creation, de-creation, and re-creation. Minor themes include
-	sabbath, sea monsters, land, city, wisdom, and praise.
+	getting new attention. Four major headings in the course are
+	creation, counter-creation, de-creation, and re-creation. Related
+	themes include sea monsters, land, sabbath, the city, wisdom, and
+	praise.
 }% end of course description
 \objectives{% recall Bloom's taxonomy: https://www.celt.iastate.edu/teaching/effective-teaching-practices/revised-blooms-taxonomy/
 	By the end of the course students should be able to articulate a theology of creation.
 	In particular, they should be able to:
 		understand a variety of methods and approaches to the theme;
-		analyze a proposal stipulating rules for Christian speech about creation;
+%		analyze a proposal stipulating rules for Christian speech about creation;
 		identify a number of primary texts, both inside and outside the Bible;
 		contextualize and discuss many of those texts informally;
 		name and evaluate with ecumenical sensitivity a range of scholarly interprations, including by Jews, Christians, and others;
@@ -64,69 +66,85 @@
 
 The following texts are required. Students are strongly encouraged to
 purchase their own copies. Library copies that are not reference works
-will be placed on a 2-hour reserve.
+will be placed on reserve.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
-\begin{thebibliography}{Levenson}% use the longest item in the bibliography
+\begin{thebibliography}{Bouteneff}% use the longest item in the bibliography
 
-	\bibitem[NRSV]{nrsv} M.\,D. Coogan, ed.
-    \emph{New Oxford Annotated Bible with Apocrypha: NRSV}. 5th ed.
-    Oxford: Oxford University Press, 2018.
-    ISBN 978-0190276072.
+	\bibitem[NJPS]{njps} Berlin, Adele, and Marc Zvi Brettler, eds.
+    \emph{The Jewish Study Bible: Jewish Publication Society Tanakh Translation}.
+    2nd ed. Oxford: Oxford University Press, 2014.
+    % ISBN 978-0199978465.
+    The AST Library has a non-circulating copy: Ref BS 895.J4 2014.
 
-	\bibitem[Myths]{myths} Stephanie Dalley, ed.
+	\bibitem[Bouteneff]{pb} Bouteneff, Peter.
+	\emph{Beginnings: Ancient Christian Readings of the Biblical Creation Narratives}.
+	Grand Rapids: Baker Academic, 2008.
+	ISBN 978-0801032332.
+
+	\bibitem[Dalley]{sd} Stephanie Dalley, ed.
 	\emph{Myths from Mesopotamia: Creation, The Flood, Gilgamesh, and Others}. Rev. ed.
 	Oxford: Oxford University Press, 2000.
 	ISBN: 978-0199538362.
 
-	\bibitem[Levenson]{jl} Jon D. Levenson.
-	\emph{Creation and the Persistence of Evil: The Jewish Drama of Divine Omnipotence}.
-	Princeton: Princeton University Press, 1988 (repr. 1994).
-	ISBN: 978-0691029504.
-
-	\bibitem[Tanner]{kt} Kathryn Tanner.
-	\emph{God and Creation in Christian Theology: Tyranny or Empowerment?}
-	Oxford: Basil Blackwell, 1988 (repr. Minneapolis: Fortress Press, 2005).
-	ISBN: 978-0800637378.
-
 \end{thebibliography}
 \endgroup
 
-The NJPS is a good alternative study Bible: Adele Berlin and Marc Zvi
-Brettler, eds., \emph{The Jewish Study Bible: Second Edition} (Oxford:
-Oxford University Press, 2014). \href{https://danieldriver.com/courses/hb-3117/}{See
-my website for links to required and recommended books, and a discussion
-of options for a Bible.}
+Alternatively, for an ecumenical study Bible with a gender-inclusive
+translation of the full Christian Bible, see Michael D. Coogan, ed.,
+\emph{The New Oxford Annotated Bible: New Revised Standard Version with
+the Apocrypha}, 5th ed. (Oxford: Oxford University Press, 2018).
+% ISBN 978-0190276072.
 
 \section{Supplementary Texts}
 \label{supplementary}
 
 Supplementary readings will be recommended throughout the semester and
 may be placed on reserve or made available through the course website.
-
-The following titles are especially worth owning and consulting.
-\cite{ed} explores the theology and ethics of land use. \cite{ms}
-develops a suggestive reading of Genesis 1 within a comparative
-framework. We will read excerpts from both books. Beyond the course
-theme, \cite{rlgs} contains sound advice on core skills like reading
-religious texts, writing essays and reviews, revising essays, making
-oral presentations, and learning languages. Finally, \cite{sbl2} will
-help you format your papers appropriately.
+For example, \cite{ed} explores the theology and ethics of land use.
+\cite{ms} develops a suggestive reading of Genesis 1 within a
+comparative framework. We will read excerpts from these and other books.
+Beyond the course theme, \cite{rlgs} contains sound advice on core
+skills like reading religious texts, writing essays and reviews,
+revising essays, making oral presentations, and learning languages.
+Finally, \cite{sbl2} will help you format your papers appropriately.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
 \begin{thebibliography}{Making Sense}% use the longest item in the bibliography
 
+	\bibitem[Anderson]{ga} Gary A. Anderson.
+	\emph{The Genesis of Perfection: Adam and Eve in Jewish and Christian Imagination}.
+	Louisville: Westminster John Knox, 2001.
+
 	\bibitem[Davis]{ed} Ellen F. Davis.
 	\emph{Scripture, Culture, and Agriculture: An Agrarian Reading of the Bible}.
 	New York: Cambridge University Press, 2009.
-	ISBN: 978-0521732239.
+	% ISBN: 978-0521732239.
+
+	\bibitem[Dell]{kd} Katharine J. Dell.
+	\emph{The Lord by Wisdom Founded the Earth: Creation and Covenant in Old Testament Theology}.
+	Waco, TX: Baylor University Press, 2023.
+
+	\bibitem[Goroncy]{jg} Jason Goroncy, ed.
+	\emph{T\&T Clark Handbook of the Doctrine of Creation}.
+	London: T\&T Clark, 2024.
+
+	\bibitem[Levenson]{jl} Jon D. Levenson.
+	\emph{Creation and the Persistence of Evil: The Jewish Drama of Divine Omnipotence}.
+	Princeton: Princeton University Press, 1988. % (repr. 1994).
+	% ISBN: 978-0691029504.
 
 	\bibitem[Smith]{ms} Mark S. Smith.
 	\emph{The Priestly Vision of Genesis 1}.
 	Minneapolis: Fortress, 2010.
-	ISBN: 978-0800663735.
+	% ISBN: 978-0800663735.
+
+	\bibitem[Tanner]{kt} Kathryn Tanner.
+	\emph{God and Creation in Christian Theology: Tyranny or Empowerment?}
+	Oxford: Basil Blackwell, 1988 (repr. Minneapolis: Fortress Press, 2005).
+	% ISBN: 978-0800637378.
 
 	\bibitem[Making Sense]{rlgs} Northey, Margot, Bradford A. Anderson, and Joel N. Lohr.
 	\emph{Making Sense in Religious Studies: A Student's Guide to Research and Writing}.
@@ -160,35 +178,20 @@ the needs of the class.
 	\sessionskip{\textbf{\S}.}&\textbf{Primary}&\textbf{Secondary}&\textbf{Due}\\
 	\midrule
 
-	\unit{Creation} \\
+		& Psalms 8; 74; 104       &                            & 30 June \\
+		& Other “Creation” Pss    & \cite[ch 1]{ms}            &  1 July \\
+		& Genesis 1               & \cite[ch 3]{ed}            &  2 July \\
+		& \cite[pp 1--153]{sd}    & \cite[ch 5]{ms}            &  3 July \\
+		& \cite[pp 154--315]{sd}  & \cite[chs 5--7]{jl}        &  4 July \\ [1ex]
 
-		& Genesis 1--2         &                            & 13 Sep. \\
-		& Psalms 8; 19; 104    & \cite[chs 1--2]{kt}        & 20 Sep. \\
-		& Prov 8; Wis of Sol 6 & \cite[chs 3--end]{kt}      & 27 Sep. \\
-		& Isaiah 40--55        & \cite[ch 1]{ms}            &  4 Oct. \\
-	\noclass{Thanksgiving}                                  & 11 Oct. \\
-	\noclass{Reading Week}                                  & 18 Oct. \\
-	\reminder{A first short paper is \textbf{due} by the end of week five}{} \\ [1ex]% NB I moved this back from wk 6 to wk 5 because of the unusual two week break in F21. Perhaps move back to wk 6 next time.
+	\noclass{Weekend Break, 5--6 July}                         &  \\ [1ex]
+%	\reminder{A first short paper is \textbf{due} by the end of week five}{} \\ [1ex]% NB I moved this back from wk 6 to wk 5 because of the unusual two week break in F21. Perhaps move back to wk 6 next time.
 
-	\unit{Counter-Creation} \\
-
-		& Genesis 3--5         & \cite[chs 1--4]{jl}        & 25 Oct. \\
-		& \cite[pp 1--153]{myths}   & \cite[chs 5--9]{jl}   &  1 Nov. \\
-		& \cite[pp 154--315]{myths} & \cite[chs 10--12]{jl} &  8 Nov. \\ [1ex]
-
-	\unit{De-Creation} \\
-
-		& Genesis 6--9         & self-directed              & 15 Nov. \\
-		& Job; Psalms 74; 89   & self-directed              & 22 Nov. \\
-		& Ecclesiastes 1--12   & self-directed              & 29 Nov. \\
-	\reminder{A second short paper is \textbf{due} by the end of week eleven}{} \\ [1ex]
-
-	\unit{Re-Creation} \\
-
-		& Gen 10--14; Exod 1--15; 39--40 & self-directed    &  6 Dec. \\
-		& Psalms 51; 146--150  & \cite[ch 9]{ed}            & 13 Dec. \\ [1ex]
-
-	\reminder{End of Term: Final marks are due for all courses}{16 Dec.} \\
+		& Genesis 2               & \cite[ch 1]{pb}            &  7 July \\
+		& Genesis 3               & \cite[ch 2]{pb}            &  8 July \\
+		& Job (selections)        & \cite[ch 3]{pb}            &  9 July \\
+		& Prov 8; Wis of Sol 6    & \cite[ch 4]{pb}            & 10 July \\
+		& John 1; Rom 5           & \cite[chs 5--6]{pb}        & 11 July \\
 
 	\bottomrule
   \end{tabular}
@@ -205,82 +208,61 @@ The grade structure for \ccode has the following elements.
 
 \begin{enumerate}
 
-	\item \textbf{Writing prompts} will be given throughout the
-	semester. They are low-risk writing exercises designed to encourage
-	careful reading of the assigned material, and to help explore its
-	significance. Prompt responses are not marked, though points may be
-	deducted if the exercise is not taken seriously. Prompts will
-	usually be given live, near the beginning of each class. However, we
-	may shift to online submissions if the format seems preferable
-	(depending, in part, on how hybrid engagement works). If the prompts
-	move to online forums, responses should not exceed 300 words.
+	\item Students should come to class prepared to \textbf{discuss the
+	readings}. What do you note about the assigned material? What
+	images, words, phrases, verses, or motifs stand out to you? Make
+	notes as you read. Share some highlights with the class. Finally, be
+	sure to address any prompts that the professor may set as homework
+	for the day. Regular participation is expected and required.
 
 	\item Two \textbf{short papers} will facilitate student engagement
-	with the art of biblical interpretation. One is keyed to a
-	theological theme, the other to a biblical text. Each should be
-	about 3,000 words in length. The first paper is due at the end of
-	the fifth week of class; the second is due at the end of the
-	eleventh week.
+	with themes and texts of creation. One is keyed to definition, the
+	other to explication. The first paper is due at the start of class
+	(9:15 \AM) on day six; the second is due by midnight on day ten.
+
+
+%	\item Two \textbf{short papers} will facilitate student engagement
+%	with the art of biblical interpretation. One is keyed to a
+%	theological theme, the other to a biblical text. Each should be
+%	about 3,000 words in length. The first paper is due at the end of
+%	the fifth week of class; the second is due at the end of the
+%	eleventh week.
 
 	% I moved the first paper from wk 6 to wk 5 because of the unusual
 	% two-week break in F21. Perhaps move it back to wk 6 next time.
 
 	\begin{enumerate}
 
-		\item A \textbf{theological essay} invites reflection on the
-		parameters for Christian discourse about creation. How can and
-		should we speak of the God of creation? The primary interlocutor
-		for this paper is \cite{kt}. She outlines a number of rules for
-		faithful speech about the transcendence and creative agency of
-		God. Is her thesis persuasive? Is it right? How does it help?
-		What are its limitations? Other sources may be engaged, if
-		desired, but \cite{kt} must be engaged fully.
-
-		You might think of this paper as a \emph{review essay} (note:
-		this is not the same thing as a book report). Devote the first
-		half of the paper to a summary the argument under review. Devote
-		the second half of the paper to critical analysis and evaluation
-		of the same. Be specific. In your analysis, select and discuss
-		concrete examples from the work. Be fair, too, but do not fail
-		to take a position. The paper needs to develop a
-		\textbf{thesis}. See me and \cite[chs 3, 5–7, 11]{rlgs} for
-		guidance.
-
-		\item An \textbf{exegetical essay} provides an opportunity for
-		direct work with the biblical text. The first task is to
-		identify an appropriate text. Select a suitably short passage
-		from the HB/OT. Then, conduct an analysis and explication of it.
-		Interact with the assigned literature and at least five other
-		sources or commentators. (Note that secondary reading from week
-		eight is self-directed; you may also ask for suggestions.)
-		Advance a \textbf{thesis} that relates to the chosen text. See
-		me and \cite[chs 3, 5, 8, 11]{rlgs} for guidance.
+		\item An \textbf{extended definition} of 1,000 words gives
+		students a chance to identify, select, and write up lemmas for a
+		class lexicon of terms related to theological discourse about
+		creation. A list of possible terms will be generated by the
+		class. Each student will then select a word (lemma) and write up
+		a definition with supporting detail, to be read aloud to the
+		class on the first Friday (early option) or second Monday
+		(deadline). The essay should include a one-sentence definition
+		(read: \textbf{thesis statement}) in the introductory paragraph.
+		For a published example, see Daniel R. Driver, “Sabbath and
+		Land,” in: \cite[21--31]{jg}.
+		
+		\item An \textbf{exegetical essay} of between 1,500 and 2,000
+		words provides an opportunity for direct work with the biblical
+		text. The first task is to identify an appropriate verse related
+		to creation. Select a key verse from the HB/OT. Then, conduct an
+		analysis and explication of it. Interact with at least five
+		other sources or commentators. Advance a \textbf{thesis} that
+		relates to the chosen text. See me and \cite[chs 3, 5, 8,
+		11]{rlgs} for guidance.
 
 	\end{enumerate}
 
-	\item Before the last day of class, each student will upload a brief
-	(5--7 minute) \textbf{video presentation} that summarizes and
-	synthesizes their work in this course. First, by way of
-	\emph{summary}, describe and contextualize the results of your
-	exegetical paper. What text did you select and why? What did you
-	discover about it through research and study? In a single sentence,
-	what was your thesis? Second, by way of \emph{synthesis}, what might
-	your exegetical work contribute to a renewed Christian theology of
-	creation? You may revisit Tanner's argument here, if desired.
-	Alternatively, how might your findings sharpen our understanding of
-	the Bible's creation traditions?
-
-	In essence, in this video you are distilling and representing the
-	introduction and conclusion to your exegetical essay, but with a
-	wider outlook and in a different medium. Elaborate with a view to
-	the broad theme of creation. Answer the question: So what? Videos
-	should be sharable by URL (try YouTube or Vimeo), and posted to
-	Teams for the benefit of the class, to be viewed and discussed
-	asynchronously. Finally, be sure not to exceed the time limit;
-	points will be deducted for overlong submissions. To keep to time
-	you will probably need to edit your video (recommended), or else to
-	plan and rehearse your presentation well enough to capture it in a
-	single take.
+	\item Students are to produce some form of \textbf{creative
+	exegesis} in response to a verse, short passage, or (at most)
+	chapter of the HB/OT that pertains to creation. These creative
+	responses to the text will be presented to the class on days eight
+	and nine of the course (9–10 July). Students will retain possession
+	of their artwork. Evaluation will be based on a 5-minute oral
+	explanation of their art’s relation to the chosen text.
 
 \end{enumerate}
 
@@ -292,19 +274,15 @@ The breakdown for the semester's total work is shown in
   {\lining
   \begin{tabular}{lr}
     \toprule
-    Writing Prompts    & 20\% \\
-    Review Essay       & 30\% \\
-    Exegetical Essay   & 30\% \\
-    Video Presentation & 20\% \\
+    Daily Discussion    & 10\% \\
+    Extended Definition & 25\% \\
+    Creative Exegesis   & 30\% \\
+    Exegetical Essay    & 35\% \\
     \bottomrule
   \end{tabular}}
   \caption{Distribution of Grades}
   \label{grade-dist}
 \end{table}
-
-%AST's \href{http://www.astheology.ns.ca/students/resources.html}{Academic
-%Calendar} provides guidelines and detailed criteria for academic
-%assessment. Marks are assigned by letter grade using these benchmarks.
 
 \input{\policy/grades}
 \input{\policy/other}
